# fancyqr

./: .gitiginore  .gitignore  LICENSE  README.md  app.py  count.py  db.py  decode_qr.py  diff_extra.py  diff_eye.py  diff_modules.py  fancy_qr.py  flake.nix  main.py  package-lock.json  package.json  parse_svg.py  pixi.toml  pyproject.toml  schema.sql  test-integration.ts  test.py  test_bars.py  test_calls.py  test_colors.py  test_inset.py  test_main.py  test_svg.py  test_white.py  tsconfig.json  wrangler.toml
src/: fancy_qr.ts  index.ts
static/: dashboard.html  index.html  stats.html
