[project]
name = "fancyqr"
version = "0.1.0"
description = "Styled SVG QR Code Generator"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "qrcode>=8.2",
    "uvicorn>=0.48.0",
]

[project.scripts]
fancyqr-web = "app:main"
fancyqr-cli = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "fancy_qr.py", "main.py", "static", "logo.svg", "db.py"]
